Created footer in HTML + CSS
div + ID "footer" in HTML. Styled in CSS to align under bottom left of app

--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
                     </div>
                 </div>
             </div>
+            
+               <div class="footer" id="footer">
+                    <a href="https://github.com/beccarusso/rainbow-weather-app" >     Open-source code</a> by Rebecca Russo
+               </div>
+                
             <script src="index.js"></script>
 </body>
 
