Updated the HTML source paths of the new icon images in 7 day forecast
These are currently placeholder images until I connect the live data for the 7 day forecast. Edited and resized a couple icons so they were square to fit.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title sm">Su</h5>
                                     <div class="sundayRadius">
-                                        <img class="raining" src="https://www.linkpicture.com/q/raining.png">
+                                        <img class="raining" src=images/icons/Rain_Medium.png>
                                     </div>
                                     </br>
                                     <p class="card-text">47°/30°
@@ -92,7 +92,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">M</h5>
                                     <div class="mondayRadius">
-                                        <img class="cloudy" src="https://www.linkpicture.com/q/cloudy.png">
+                                        <img class="cloudy" src=images/icons/Cloud.png>
                                     </div>
                                     </br>
                                     <p class="card-text">44°/32°</p>
@@ -107,7 +107,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">T</h5>
                                     <div class="tuesdayRadius">
-                                        <img class="sunshine" src="https://www.linkpicture.com/q/sunshine_1.png">
+                                        <img class="sunshine" src=images/icons/Sun.png>
                                     </div>
                                     </br>
                                     <p class="card-text">49°/35°</p>
@@ -122,7 +122,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">W</h5>
                                     <div class="wednesdayRadius">
-                                        <img class="raining" src="https://www.linkpicture.com/q/raining.png">
+                                        <img class="raining" src=images/icons/Rain_Heavy_Sun.png>
                                     </div>
                                     </br>
                                     <p class="card-text">56°/39°</p>
@@ -137,7 +137,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Th</h5>
                                     <div class="thursdayRadius">
-                                        <img class="raining" src="https://www.linkpicture.com/q/raining.png">
+                                        <img class="raining" src=images/icons/Rain_Heavy_Sun.png>
                                     </div>
                                     </br>
                                     <p class="card-text">53°/38°</p>
@@ -152,7 +152,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">F</h5>
                                     <div class="fridayRadius">
-                                        <img class="sunshine" src="https://www.linkpicture.com/q/sunshine_1.png">
+                                        <img class="sunshine" src=images/icons/Sun.png>
                                     </div>
                                     </br>
                                     <p class="card-text">51°/38°</p>
@@ -167,7 +167,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">S</h5>
                                     <div class="saturdayRadius">
-                                        <img class="cloudy" src="https://www.linkpicture.com/q/cloudy.png">
+                                        <img class="cloudy" src=images/icons/Thunder.png>
                                     </div>
                                     </br>
                                     <p class="card-text">51°/39°</p>
