Changed div class names for days of week + their respective border radius styling
Changed the class names from the actual days of the week to numbered days, because when I import the live 7 day forecast data it will be rotating based on the current day of the week.  I wanted the code to be readable and reflect that

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                 <div class="container">
                     <div class="row no-gutters">
 
-                        <div class="sunday">
+                        <div class="day1">
                             <div class=col->
 
                                 <div class="card-body">
                                     <h5 class="card-title sm">Su</h5>
-                                    <div class="sundayRadius">
+                                    <div class="day1Radius">
                                         <img class="raining" src=images/icons/Rain_Medium.png>
                                     </div>
                                     </br>
@@ -85,13 +85,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="monday">
+                        <div class="day2">
 
                             <div class=col->
 
                                 <div class="card-body">
                                     <h5 class="card-title">M</h5>
-                                    <div class="mondayRadius">
+                                    <div class="day2Radius">
                                         <img class="cloudy" src=images/icons/Cloud.png>
                                     </div>
                                     </br>
@@ -101,12 +101,12 @@
                             </div>
                         </div>
 
-                        <div class="tuesday">
+                        <div class="day3">
                             <div class=col->
 
                                 <div class="card-body">
                                     <h5 class="card-title">T</h5>
-                                    <div class="tuesdayRadius">
+                                    <div class="day3Radius">
                                         <img class="sunshine" src=images/icons/Sun.png>
                                     </div>
                                     </br>
@@ -116,12 +116,12 @@
                             </div>
                         </div>
 
-                        <div class="wednesday">
+                        <div class="day4">
                             <div class=col->
 
                                 <div class="card-body">
                                     <h5 class="card-title">W</h5>
-                                    <div class="wednesdayRadius">
+                                    <div class="day4Radius">
                                         <img class="raining" src=images/icons/Rain_Heavy_Sun.png>
                                     </div>
                                     </br>
@@ -131,12 +131,12 @@
                             </div>
                         </div>
 
-                        <div class="thursday">
+                        <div class="day5">
                             <div class=col->
 
                                 <div class="card-body">
                                     <h5 class="card-title">Th</h5>
-                                    <div class="thursdayRadius">
+                                    <div class="day5Radius">
                                         <img class="raining" src=images/icons/Rain_Heavy_Sun.png>
                                     </div>
                                     </br>
@@ -146,12 +146,12 @@
                             </div>
                         </div>
 
-                        <div class="friday">
+                        <div class="day6">
                             <div class=col->
 
                                 <div class="card-body">
                                     <h5 class="card-title">F</h5>
-                                    <div class="fridayRadius">
+                                    <div class="day6Radius">
                                         <img class="sunshine" src=images/icons/Sun.png>
                                     </div>
                                     </br>
@@ -161,13 +161,13 @@
                             </div>
                         </div>
 
-                        <div class="saturday">
+                        <div class="day7">
                             <div class=col->
 
                                 <div class="card-body">
                                     <h5 class="card-title">S</h5>
-                                    <div class="saturdayRadius">
-                                        <img class="cloudy" src=images/icons/Thunder.png>
+                                    <div class="day7Radius">
+                                        <img class="thunder" src=images/icons/Thunder.png>
                                     </div>
                                     </br>
                                     <p class="card-text">51°/39°</p>
