--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                         </ul>
                         <div class="mainTemperature">
                             <strong id="temperature"></strong>
-                            <span class="units"><a href="#" id="fahrenheit-link" class="active">°F</a> |
-                                <a href="#" id="celsius-link">°C</a></span>
+                            <span class="units"><a href="#" id="celsius-link" class="active">°C</a> |
+                                <a href="#" id="fahrenheit-link">°F</a></span>
                         </div>
 
                         </p>
@@ -85,121 +85,16 @@
             </div>
 
 
-            <div class="daysofweek">
-                <div class="row no-gutters">
+            <div class="row weather-forecast" id="forecast">
+                
 
-                    <div class="day1">
-                        <div class=col->
-
-                            <div class="card-body">
-                                <h5 class="card-title sm">Su</h5>
-                                <div class="day1Radius">
-                                    <img class="raining" src=images/icons/Rain_Medium.png>
-                                </div>
-                                </br>
-                                <p class="card-text">47°/30°
-                                </p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="day2">
-
-                        <div class=col->
-
-                            <div class="card-body">
-                                <h5 class="card-title">M</h5>
-                                <div class="day2Radius">
-                                    <img class="cloudy" src=images/icons/Cloud.png>
-                                </div>
-                                </br>
-                                <p class="card-text">44°/32°</p>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="day3">
-                        <div class=col->
-
-                            <div class="card-body">
-                                <h5 class="card-title">T</h5>
-                                <div class="day3Radius">
-                                    <img class="sunshine" src=images/icons/Sun.png>
-                                </div>
-                                </br>
-                                <p class="card-text">49°/35°</p>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="day4">
-                        <div class=col->
-
-                            <div class="card-body">
-                                <h5 class="card-title">W</h5>
-                                <div class="day4Radius">
-                                    <img class="raining" src=images/icons/Rain_Heavy_Sun.png>
-                                </div>
-                                </br>
-                                <p class="card-text">56°/39°</p>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="day5">
-                        <div class=col->
-
-                            <div class="card-body">
-                                <h5 class="card-title">Th</h5>
-                                <div class="day5Radius">
-                                    <img class="raining" src=images/icons/Rain_Heavy_Sun.png>
-                                </div>
-                                </br>
-                                <p class="card-text">53°/38°</p>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="day6">
-                        <div class=col->
-
-                            <div class="card-body">
-                                <h5 class="card-title">F</h5>
-                                <div class="day6Radius">
-                                    <img class="sunshine" src=images/icons/Sun.png>
-                                </div>
-                                </br>
-                                <p class="card-text">51°/38°</p>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="day7">
-                        <div class=col->
-
-                            <div class="card-body">
-                                <h5 class="card-title">S</h5>
-                                <div class="day7Radius">
-                                    <img class="thunder" src=images/icons/Thunder.png>
-                                </div>
-                                </br>
-                                <p class="card-text">51°/39°</p>
-
-                            </div>
-                        </div>
-                    </div>
-
+                </div>
+                <div class="footer" id="footer">
+                    <a href="https://github.com/beccarusso/rainbow-weather-app"> Open-source code</a> by Rebecca Russo
                 </div>
             </div>
 
-            <div class="footer" id="footer">
-                <a href="https://github.com/beccarusso/rainbow-weather-app"> Open-source code</a> by Rebecca Russo
-            </div>
+           
 
             <script src="index.js"></script>
 </body>
