Removed unncessary CSS styling + reformatted HTML

--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
 <body>
     <div class="container">
         <div class="card" style="width: 25rem;">
-
             <img src="https://www.linkpicture.com/q/rainbowgradient.jpg" class="card-img-top" alt="...">
-
-            <div class="top">
-                <div class="searchBar" id="searchBar">
-                    <form class="form-inline md-form mr-auto mb-4" id="search-form">
-
-                        <div class="row">
+                <div class="top">
+                    <div class="searchBar" id="searchBar">
+                        <form class="form-inline md-form mr-auto mb-4" id="search-form">
+                            <div class="row">
                             <div class="col-">
                                 <input class="form-control mr-sm-2" type="search" placeholder="Search City"
                                     aria-label="Search" id="city-input">
@@ -40,15 +37,10 @@
                             <div class="col-">
                                 <button class="locationButton" id="current-location-button">
                                     <i class="fas fa-map-marker-alt"></i>
-                            </div>
-
-
+                                </div>
                             </button>
                         </div>
-
                     </form>
-
-
                 </div>
 
 
@@ -56,9 +48,9 @@
                 <div class=container>
                     <div class="mainDisplay">
                         <p class="card-title"></p>
-
-                        <div class="city" id="city">
-                            Jamestown <br />
+                            <div class="city" id="city">
+                            Jamestown 
+                            <br />
                         </div>
                         <ul>
                             <li id="date"></li>
@@ -75,13 +67,9 @@
                             <span class="units"><a href="#" id="celsius-link" class="active">°C</a> |
                                 <a href="#" id="fahrenheit-link">°F</a></span>
                         </div>
-
                         </p>
-
                     </div>
-
                 </div>
-
             </div>
 
 
