--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="images/rainbow_icon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainbow Weather App</title>
@@ -16,6 +17,7 @@
 </head>
 
 <body>
+    <br>
     <div class="container">
         <div class="card" style="width: 25rem;">
             <img src="https://www.linkpicture.com/q/rainbowgradient.jpg" class="card-img-top" alt="...">
