--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br>
     <div class="container">
         <div class="card" style="width: 25rem;">
-            <img src="https://www.linkpicture.com/q/rainbowgradient.jpg" class="card-img-top" alt="...">
+            <img src="https://i.ibb.co/0KMTnJ2/rainbowgradient.jpg" class="card-img-top" alt="...">
                 <div class="top">
                     <div class="searchBar" id="searchBar">
                         <form class="form-inline md-form mr-auto mb-4" id="search-form">
